--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
     <header class="header">
         <div class="fixed-container">
             <div>
-                <a class="header__link" href="#">Услуги</a>
-                <a class="header__link" href="#">Портфолио</a>
-                <a class="header__link" href="#">Стоимость</a>
+                <a class="header__link" href="#services">Услуги</a>
+                <a class="header__link" href="#projects">Портфолио</a>
+                <a class="header__link" href="#price">Стоимость</a>
             </div>
             <div>
                 <span class="header__span">+7 (499) 995-55-77</span>
@@ -54,7 +54,7 @@
         </div>
     </section>
     <section>
-        <div class="fixed-container">
+        <div id="services" class="fixed-container">
             <h2 class="title"> Что я делаю</h2>
             <div class="services">
                 <div>
@@ -78,7 +78,7 @@
         </div>
     </section>
     <section>
-        <div class="fixed-container">
+        <div id="projects" class="fixed-container">
             <h2 class="title">Примеры работ</h2>
             <div class="projects">
                 <div>
@@ -97,7 +97,7 @@
             <button class="light-btn open-popup">Заказать проект</button>
         </div>
     </section>
-    <section class="price-info">
+    <section id="price" class="price-info">
         <div class="fixed-container">
             <h2 class="title price-info__title">Адаптивная вёрстка под все устройства
                 и браузеры от&nbsp;1000 ₽ всего за 4 часа.*</h2>
@@ -110,9 +110,9 @@
     <footer>
         <div class="fixed-container">
             <div class="footer__div">
-                <a class="footer__link" href="#">Услуги</a>
-                <a class="footer__link" href="#">Портфолио</a>
-                <a class="footer__link" href="#">Стоимость</a>
+                <a class="footer__link" href="#services">Услуги</a>
+                <a class="footer__link" href="#projects">Портфолио</a>
+                <a class="footer__link" href="#price">Стоимость</a>
             </div>
             <div>
                 <a class="footer__link" href="dmitry@alekseev.com">dmitry@alekseev.com</a>
